<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Psp-Chat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">Username</string>
    <string name="hint_pass">Password</string>
    <string name="login">Login</string>
    <string name="email_re">Email adrress</string>
    <string name="confirm">Confirm password</string>
    <string name="register">Registration acccount</string>
    <string name="register_re">REGISTER</string>
    <string name="psp">PSP-CHAT</string>
    <string name="done">Done</string>
    <string name="btn_send">Send</string>
    <string name="chat">input message</string>
    <string name="username">vanphonghy</string>
    <string name="recent_message">Hi Nguyen Van Phong ! </string>
    <string name="time">16 : 03 </string>
    <string name="by">Coding By Nguyen Van Phong</string>
    <string name="save">Save my information</string>
    <string name="add_friend">Add Friend</string>
    <string name="change">Change Status</string>
    <string name="Logout">Logout</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="enter">Enter Your Name</string>
    <string name="enter_status">Enter Status</string>
    <string name="add_favorite">ADD FAVORITE</string>
    <string name="title_activity_activity_add_favorite">ActivityAddFavorite</string>
    <string name="title_activity_activity_add_friend_favorite">ActivityAddFriendFavorite</string>

</resources>