<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="phong.android.com.ActivityFirstLogin" >

    <LinearLayout
        android:id="@+id/layout_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:text="@string/register_re"
            android:textColor="@color/input_color"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/re_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style_one"
            android:hint="@string/hint_username"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/while_color" />

        <EditText
            android:id="@+id/re_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style_one"
            android:hint="@string/hint_pass"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/while_color" />

        <EditText
            android:id="@+id/re_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style_one"
            android:hint="@string/confirm"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/while_color" />

        <EditText
            android:id="@+id/re_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style_one"
            android:hint="@string/email_re"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/while_color" />
        
                <Button
            android:id="@+id/btnDone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/done"
            android:textColor="@color/input_color" />
    </LinearLayout>

</RelativeLayout>