<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/thumnailAvatarFriend"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" 
        android:background="@drawable/style_two"/>

    <TextView
        android:id="@+id/tvUsernameRecent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/thumnailAvatarFriend"
        android:layout_toRightOf="@+id/thumnailAvatarFriend"
        android:text="@string/username"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMessageRecent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsernameRecent"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/thumnailAvatarFriend"
        android:layout_toRightOf="@+id/thumnailAvatarFriend"
        android:text="@string/recent_message"
        android:textSize="15sp"
        android:textStyle="italic" />
    
    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvMessageRecent"
        android:layout_marginTop="5dp"
        android:text="@string/time"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>